--- a/MSE-vs-MAE.ipynb
+++ b/MSE-vs-MAE.ipynb
@@ -37,7 +37,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -189,7 +191,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2a551ad53c8>"
+       "<matplotlib.collections.PathCollection at 0x2be1a056358>"
       ]
      },
      "execution_count": 9,
@@ -251,7 +253,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2a551b6a780>"
+       "<matplotlib.collections.PathCollection at 0x2be1a0ef7f0>"
       ]
      },
      "execution_count": 12,
@@ -405,16 +407,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2a551e31fd0>]"
+       "[<matplotlib.lines.Line2D at 0x2be17fbc828>]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -434,6 +436,100 @@
    "source": [
     "plt.scatter(x_train, y_train)\n",
     "plt.plot(x_train, reg.predict(x_train), color='r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_predict = reg.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MSE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24.156602134387438"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mse_test = np.sum((y_predict - y_test) ** 2) / len(y_test)\n",
+    "mse_test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RMSE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.914936635846635"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from math import sqrt\n",
+    "rmse_test = sqrt(mse_test)\n",
+    "rmse_test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MAE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.5430974409463873"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mae_test = np.sum(np.absolute(y_predict - y_test)) / len(y_test)\n",
+    "mae_test"
    ]
   },
   {
