--- a/Simple-Linear-Regression.ipynb
+++ b/Simple-Linear-Regression.ipynb
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](img/LeastSquares.png)"
+    "![LeastSquares](img/LeastSquares.png)"
    ]
   },
   {
